--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>QuickTable UltraLite v36</title>
+<title>QuickTable UltraLite v37</title>
 <style>
   :root{
     --bg:#0b0f14; --panel:#0f1520; --border:#223047; --text:#e7ecf3;
@@ -55,32 +55,32 @@
       <span class="chip">Ръка: <b id="curHand">—</b></span>
       <span class="chip">Стак: <b id="curStack">—</b></span>
     </div>
-    <button id="openHB" class="btn">Ръка</button>
+    <button id="openHB" class="btn" type="button">Ръка</button>
   </div>
 
   <!-- Stack quick picker -->
   <div class="stackRow" id="stackRow">
-    <button class="stackBtn" data-s="0–4">0–4</button>
-    <button class="stackBtn" data-s="4–7">4–7</button>
-    <button class="stackBtn" data-s="7–10">7–10</button>
-    <button class="stackBtn" data-s="10–13">10–13</button>
-    <button class="stackBtn" data-s="13+">13+</button>
+    <button class="stackBtn" data-s="0–4"  type="button">0–4</button>
+    <button class="stackBtn" data-s="4–7"  type="button">4–7</button>
+    <button class="stackBtn" data-s="7–10" type="button">7–10</button>
+    <button class="stackBtn" data-s="10–13" type="button">10–13</button>
+    <button class="stackBtn" data-s="13+"  type="button">13+</button>
   </div>
 
   <!-- FULLSCREEN Hand Builder -->
   <div id="hb" class="overlay">
     <div class="hbHead">
       <div class="hbTitle">Избери ръка (два ранга + тип)</div>
-      <button id="closeHB" class="btn">Затвори</button>
+      <button id="closeHB" class="btn" type="button">Затвори</button>
     </div>
     <div class="hbInner">
       <div class="rankGrid" id="rankGrid"></div>
       <div class="typeRow" id="typeRow">
-        <button class="typeBtn" data-type="pair">Pair</button>
-        <button class="typeBtn" data-type="s">Suited (s)</button>
-        <button class="typeBtn" data-type="o">Offsuit (o)</button>
+        <button class="typeBtn" data-type="pair" type="button">Pair</button>
+        <button class="typeBtn" data-type="s"    type="button">Suited (s)</button>
+        <button class="typeBtn" data-type="o"    type="button">Offsuit (o)</button>
       </div>
-      <button id="clearHand" class="clearBtn">Изчисти ръката</button>
+      <button id="clearHand" class="clearBtn" type="button">Изчисти ръката</button>
     </div>
   </div>
 
@@ -94,12 +94,12 @@
   </div>
 
 <script>
-(() => {
+(function(){
   // Colors & helpers
   const COLORS={"FOLD":"#f4f6fa","L-F-F":"#a7e8a7","L-C-F":"#155d15","L-C-AI":"#bcdcf3","L-R-AI":"#0b3a94","MR-F-F":"#ffe27a","MR-C-AI":"#7b4a2a","MR-4B-AI":"#e44747","SHOVE":"#6d4b8e"};
-  const norm=s=>(s||"").toUpperCase().replace(/\\s+/g,""); const isPushPos=p=>/PUSH/i.test(p);
-  const rgb=h=>{h=h.replace("#","");let n=parseInt(h,16);return{r:(n>>16)&255,g:(n>>8)&255,b:n&255}};
-  const fgFor=h=>{let{r,g,b}=rgb(h);return((r*299+g*587+b*114)/1000)>160?"#000":"#fff"};
+  const norm=s=>(s||"").toUpperCase().replace(/\s+/g,""); const isPushPos=p=>/PUSH/i.test(p);
+
+  // Limp aliases
   const alias=(key,act)=>{const up=(act||"").toUpperCase(); if(!(key==="BBvsSB_L"||key==="HUBB_L"))return{d:act,c:null};
     if(up==="MR-F-F")return{d:"Check/Call",c:COLORS["MR-F-F"]};
     if(up==="L-C-AI")return{d:"ISO/Call",c:COLORS["L-C-AI"]};
@@ -108,10 +108,10 @@
     return{d:act,c:null};};
 
   // Storage
-  let DB=JSON.parse(localStorage.getItem("qt_v36")||"{}");
-  const k=(p,r)=>p+"||"+r; const get=(p,r)=>DB[k(p,r)]?.raw||""; const set=(p,r,raw)=>{DB[k(p,r)]={raw};localStorage.setItem("qt_v36",JSON.stringify(DB))};
+  let DB=JSON.parse(localStorage.getItem("qt_v37")||"{}");
+  const k=(p,r)=>p+"||"+r; const get=(p,r)=>DB[k(p,r)]?.raw||""; const set=(p,r,raw)=>{DB[k(p,r)]={raw};localStorage.setItem("qt_v37",JSON.stringify(DB))};
   function parseRaw(raw,push=false){ if(!raw)return{def:null,map:{}}; let def=null,map={};
-    raw.split(/\\r?\\n|;/).map(s=>s.trim()).filter(Boolean).forEach(line=>{
+    raw.split(/\r?\n|;/).map(s=>s.trim()).filter(Boolean).forEach(line=>{
       const m=line.split("="); if(m.length===1){const v=m[0].trim(); if(!v)return; def=push?parseFloat(v):v.toUpperCase();}
       else{const h=norm(m[0]); const v=m.slice(1).join("=").trim();
         if(/^DEFAULT$/i.test(h)) def=push?parseFloat(v):v.toUpperCase();
@@ -127,14 +127,12 @@
   };
 
   // State
-  const ranks="A K Q J T 9 8 7 6 5 4 3 2".split(" ");
+  const ranks=["A","K","Q","J","T","9","8","7","6","5","4","3","2"];
   let first=null,second=null,type="s",stackR=null;
   const curHandEl=document.getElementById("curHand"); const curStackEl=document.getElementById("curStack");
 
-  // Hand text
   const handText=()=>{ if(!first||!second) return null; if(first===second) return first+second; return first+second+(type==="pair"?"":type); };
 
-  // Render core
   function compute(pos,h,stk){
     const push=isPushPos(pos); const {def,map}=parseRaw(get(pos,stk),push); const hh=norm(h);
     if(push){const v=map[hh]!=null?map[hh]:def; return {disp:v==null?"—":String(Math.round(v*10)/10), val:v, num: v!=null};}
@@ -142,9 +140,9 @@
   }
   const bg=(lab,key,val,neutral)=>{
     if(neutral) return "#0f1624";
-    if(/Push/i.test(lab)||/PUSH/i.test(key)||/^\\d+(\\.\\d+)?$/.test(val)) return getComputedStyle(document.documentElement).getPropertyValue('--push');
-    if(/\\(MR\\)/i.test(lab)||/_MR$/i.test(key)) return getComputedStyle(document.documentElement).getPropertyValue('--mr');
-    if(/\\(Limp\\)/i.test(lab)||/_L$/i.test(key)||key==="BU"||key==="HUSB") return getComputedStyle(document.documentElement).getPropertyValue('--limp');
+    if(/Push/i.test(lab)||/PUSH/i.test(key)||/^\d+(\.\d+)?$/.test(val)) return getComputedStyle(document.documentElement).getPropertyValue('--push');
+    if(/\(MR\)/i.test(lab)||/_MR$/.test(key)) return getComputedStyle(document.documentElement).getPropertyValue('--mr');
+    if(/\(Limp\)/i.test(lab)||/_L$/.test(key)||key==="BU"||key==="HUSB") return getComputedStyle(document.documentElement).getPropertyValue('--limp');
     return "#0f1624";
   };
 
@@ -166,31 +164,28 @@
     lab.appendChild(txt); lab.appendChild(edit);
     const val=document.createElement("div"); val.className="val"; val.textContent=c.disp;
     div.style.background=bg(label,key,c.disp,neutral);
-    if(c.color){ val.style.background=c.color; val.style.color=fgFor(c.color); }
+    if(c.color){ val.style.background=c.color; val.style.color="#000"; }
     else if(c.num){ val.style.background="rgba(0,0,0,.22)"; val.style.color="#fff"; }
-    else { const col = COLORS[(c.disp+"").toUpperCase()] || COLORS[(c.val+"").toUpperCase()] || "#2a2f3c"; val.style.background=col; val.style.color=fgFor(col); }
+    else { const col = COLORS[(c.disp+"").toUpperCase()] || COLORS[(c.val+"").toUpperCase()] || "#2a2f3c"; val.style.background=col; val.style.color="#000"; }
     div.appendChild(lab); div.appendChild(val); container.appendChild(div);
   }
 
   function render(h,stk){
     ["R_HUSB","R_HUBB","R_SB","R_BB"].forEach(id=> document.getElementById(id).innerHTML="");
-    const G=GROUPS;
-    for(const it of G.HUSB) row(document.getElementById("R_HUSB"), it.label,it.key,h,stk,!!it.neutral);
-    for(const it of G.HUBB) row(document.getElementById("R_HUBB"), it.label,it.key,h,stk,!!it.neutral);
-    for(const it of G.SB)   row(document.getElementById("R_SB"),   it.label,it.key,h,stk,!!it.neutral);
-    for(const it of G.BB)   row(document.getElementById("R_BB"),   it.label,it.key,h,stk,!!it.neutral);
+    for(const it of GROUPS.HUSB) row(document.getElementById("R_HUSB"), it.label,it.key,h,stk,!!it.neutral);
+    for(const it of GROUPS.HUBB) row(document.getElementById("R_HUBB"), it.label,it.key,h,stk,!!it.neutral);
+    for(const it of GROUPS.SB)   row(document.getElementById("R_SB"),   it.label,it.key,h,stk,!!it.neutral);
+    for(const it of GROUPS.BB)   row(document.getElementById("R_BB"),   it.label,it.key,h,stk,!!it.neutral);
   }
 
   // Hand Builder UI
   const hb=document.getElementById("hb");
-  const openHB=()=> hb.classList.add("show");
-  const closeHB=()=> hb.classList.remove("show");
-  document.getElementById("openHB").addEventListener("click", openHB);
-  document.getElementById("closeHB").addEventListener("click", closeHB);
+  document.getElementById("openHB").addEventListener("click", ()=> hb.classList.add("show"));
+  document.getElementById("closeHB").addEventListener("click", ()=> hb.classList.remove("show"));
 
   const rankGrid=document.getElementById("rankGrid");
-  ranks.forEach(r=>{ const b=document.createElement("button"); b.className="rankBtn"; b.textContent=r;
-    b.addEventListener("click", (e)=> {
+  ranks.forEach(r=>{ const b=document.createElement("button"); b.className="rankBtn"; b.textContent=r; b.type="button";
+    b.addEventListener("click", ()=> {
       if(!first){ first=r; b.classList.add("active"); }
       else if(!second){ second=r; autoCloseIfReady(); }
       else { first=r; second=null; rankGrid.querySelectorAll(".rankBtn").forEach(x=>x.classList.remove("active")); b.classList.add("active"); }
@@ -215,10 +210,9 @@
     if(first && second){
       const h=handText(); curHandEl.textContent=h||"—";
       if(h && stackR) render(h,stackR);
-      closeHB();
+      hb.classList.remove("show");
     }
   }
-
   function updateHeader(){ const h=handText(); curHandEl.textContent=h||"—"; }
 
   // Stack quick buttons
@@ -234,7 +228,7 @@
   });
 
   // Open builder initially
-  openHB();
+  hb.classList.add("show");
 })();
 </script>
 </body>
