--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>QuickTable UltraLite v41</title>
+<title>QuickTable UltraLite v42</title>
 <style>
   :root{
     --bg:#0b0f14; --panel:#0f1520; --panel2:#101827; --border:#223047; --text:#e7ecf3;
     --push:#6d4b8e; --mr:#c24a4a; --limp:#7fcf7f;
+    --gap:12px; --rankH:68px; /* фиксирана височина за прецизно позициониране */
   }
   *{box-sizing:border-box;-webkit-tap-highlight-color:transparent;touch-action:manipulation}
   body{margin:0;background:var(--bg);color:var(--text);font:15px/1.32 -apple-system,system-ui,Segoe UI,Roboto,Arial}
@@ -17,8 +18,8 @@
   .chips{display:flex;gap:6px;flex-wrap:wrap;align-items:center}
   .chip{padding:4px 8px;border:1px solid var(--border);border-radius:999px;background:#0f1624;font-size:12px}
 
-  /* Floating Action Button (Ръка) */
-  .fab{position:fixed;right:14px;bottom:14px;z-index:35;border:1px solid var(--border);background:#0f1624;color:var(--text);
+  /* FAB: бутон „Ръка“ (вляво долу) */
+  .fab{position:fixed;left:14px;bottom:14px;z-index:35;border:1px solid var(--border);background:#0f1624;color:var(--text);
         border-radius:14px;padding:14px 18px;font-weight:800;font-size:18px;box-shadow:0 6px 18px rgba(0,0,0,.35);cursor:pointer}
 
   /* Hand Builder overlay */
@@ -27,12 +28,17 @@
   .hbBox{margin:0 auto;width:100%;max-width:620px;border:1px solid var(--border);border-radius:16px;overflow:hidden;background:var(--panel2)}
   .hbHead{display:flex;align-items:center;justify-content:space-between;padding:12px;border-bottom:1px solid var(--border)}
   .hbInner{padding:16px;background:var(--panel)}
-  /* Grid: 5 cols ranks + 1 narrow col for S/O (aligned near row '2') */
-  .hbGrid{display:grid;grid-template-columns:repeat(5,1fr) 66px;gap:12px;align-items:start}
-  .rankGrid{grid-column:1 / 6;display:grid;grid-template-columns:repeat(5,1fr);gap:12px}
-  .typeCol{grid-column:6;display:flex;flex-direction:column;gap:10px;justify-content:flex-end}
-  .rankBtn{border:1px solid var(--border);background:#142035;border-radius:14px;padding:20px 0;font-weight:900;font-size:28px}
+
+  /* Grid: 5 колони рангове + 1 тясна S/O колона */
+  .hbGrid{display:grid;grid-template-columns:repeat(5,1fr) 66px;gap:var(--gap);align-items:start}
+  .rankGrid{grid-column:1/6;display:grid;grid-template-columns:repeat(5,1fr);gap:var(--gap)}
+  .rankBtn{border:1px solid var(--border);background:#142035;border-radius:14px;height:var(--rankH);font-weight:900;font-size:28px}
   .rankBtn.active{outline:2px solid #4da3ff}
+
+  /* S/O колона – изместваме надолу: под реда с 6 и 5, вдясно от 2 */
+  .typeCol{grid-column:6;display:flex;flex-direction:column;gap:10px;
+           /* 2 реда височина + два промеждутъка → позиционира S/O под 6 и 5 */
+           margin-top: calc(2 * var(--rankH) + 2 * var(--gap));}
   .typeBtn{border:1px solid var(--border);background:#111a2b;border-radius:12px;padding:14px 0;font-weight:800;font-size:18px}
   .typeBtn.active{outline:2px solid #4da3ff}
 
@@ -40,6 +46,7 @@
   .bbGrid{display:grid;grid-template-columns:repeat(5,1fr);gap:12px;margin-bottom:14px}
   .bbBtn{border:1px solid var(--border);background:#1a2740;border-radius:12px;padding:20px 0;font-weight:900;font-size:20px}
   .bbBtn.active{outline:2px solid #4da3ff}
+
   .clearBtn{border:1px solid var(--border);background:#0f1624;border-radius:12px;padding:14px 0;font-weight:800;font-size:16px;width:100%}
 
   /* Results */
@@ -74,7 +81,7 @@
     </div>
   </div>
 
-  <!-- FAB: Ръка -->
+  <!-- FAB: Ръка (вляво долу) -->
   <button id="openHB" class="fab" type="button">Ръка</button>
 
   <!-- Hand Builder -->
@@ -136,7 +143,7 @@ default = 38"></textarea>
 
 <script>
 (function(){
-  // Colors & aliases
+  // Цветове и алиаси
   const COLORS={"FOLD":"#f4f6fa","L-F-F":"#a7e8a7","L-C-F":"#155d15","L-C-AI":"#bcdcf3","L-R-AI":"#0b3a94","MR-F-F":"#ffe27a","MR-C-AI":"#7b4a2a","MR-4B-AI":"#e44747","SHOVE":"#6d4b8e"};
   const norm=s=>(s||"").toUpperCase().replace(/\s+/g,"");
   const isPushPos=p=>/PUSH/i.test(p);
@@ -147,10 +154,9 @@ default = 38"></textarea>
     if(up==="MR-4B-AI")return{d:"ISO/3bet/Fold",c:COLORS["MR-4B-AI"]};
     return{d:act,c:null};};
 
-  // DB
-  let DB=JSON.parse(localStorage.getItem("qt_v41")||"{}");
-  const k=(p,r)=>p+"||"+r; const get=(p,r)=>DB[k(p,r)]?.raw||""; const set=(p,r,raw)=>{DB[k(p,r)]={raw};localStorage.setItem("qt_v41",JSON.stringify(DB))};
-
+  // База
+  let DB=JSON.parse(localStorage.getItem("qt_v42")||"{}");
+  const k=(p,r)=>p+"||"+r; const get=(p,r)=>DB[k(p,r)]?.raw||""; const set=(p,r,raw)=>{DB[k(p,r)]={raw};localStorage.setItem("qt_v42",JSON.stringify(DB))};
   function parseRaw(raw,push=false){ if(!raw)return{def:null,map:{}}; let def=null,map={};
     raw.split(/\r?\n|;/).map(s=>s.trim()).filter(Boolean).forEach(line=>{
       const m=line.split("="); if(m.length===1){const v=m[0].trim(); if(!v)return; def=push?parseFloat(v):v.toUpperCase();}
@@ -159,7 +165,7 @@ default = 38"></textarea>
         else if(h) map[h]=push?parseFloat(v):v.toUpperCase(); }
     }); return{def,map}; }
 
-  // Groups
+  // Групи
   const GROUPS={
     HUSB:[{label:"HUSB",key:"HUSB",neutral:true},{label:"BU",key:"BU",neutral:true}],
     HUBB:[{label:"HUBB (Limp)",key:"HUBB_L"},{label:"HUBB (MR)",key:"HUBB_MR"},{label:"HUBB (Push)",key:"HUBBv_PUSH"}],
@@ -167,13 +173,13 @@ default = 38"></textarea>
     BB:[{label:"BBvsBU (MR)",key:"BBvsBU_MR"},{label:"BBvsBU (Push)",key:"BBvsBU_PUSH"},{label:"BBvsSB (Limp)",key:"BBvsSB_L"},{label:"BBvsSB (MR)",key:"BBvsSB_MR"},{label:"BBvsSB (Push)",key:"BBvsSB_PUSH"}]
   };
 
-  // State
+  // Състояние
   const ranks=["A","K","Q","J","T","9","8","7","6","5","4","3","2"];
   let first=null,second=null,type=null,stackR=null,bbChoice=null;
   const curHandEl=document.getElementById("curHand"), curStackEl=document.getElementById("curStack");
   const hb=document.getElementById("hb");
 
-  // Helpers
+  // Помощни
   const handText=()=>{ if(!first||!second) return null; if(first===second) return first+second; return first+second+(type==="pair"?"":type||""); };
   const mapBB=n=>{n=+n; if(n<=4)return"0–4"; if(n<=7)return"4–7"; if(n<=10)return"7–10"; if(n<=13)return"10–13"; return"13+";};
 
@@ -181,26 +187,26 @@ default = 38"></textarea>
   document.getElementById("openHB").addEventListener("click", ()=> hb.classList.add("show"));
   document.getElementById("closeHB").addEventListener("click", ()=> hb.classList.remove("show"));
 
-  // Ranks
+  // Рангове
   const rankGrid=document.getElementById("rankGrid");
   ranks.forEach(r=>{ const b=document.createElement("button"); b.className="rankBtn"; b.textContent=r; b.type="button";
     b.addEventListener("click", ()=>{
       if(!first){ first=r; b.classList.add("active"); }
       else if(!second){ second=r; }
       else{ first=r; second=null; rankGrid.querySelectorAll(".rankBtn").forEach(x=>x.classList.remove("active")); b.classList.add("active"); }
-      if(first && second && first===second){ type="pair"; setTypeButtons("pair"); } // авто-пейр
+      if(first && second && first===second){ type="pair"; setTypeButtons("pair"); } // авто-пейр при чифт
       maybeCloseHB(); renderIfReady();
     });
     rankGrid.appendChild(b);
   });
 
-  // Type S/O (в тесната колона)
+  // S/O (в тесната колона вдясно)
   function setTypeButtons(t){ document.querySelectorAll(".typeBtn").forEach(x=>x.classList.toggle("active", x.dataset.type===t)); }
   document.querySelectorAll(".typeBtn").forEach(btn=>{
     btn.addEventListener("click", ()=>{ type=btn.dataset.type; setTypeButtons(type); maybeCloseHB(); renderIfReady(); });
   });
 
-  // Blinds 1–15
+  // Блайндове 1–15
   const bbGrid=document.getElementById("bbGrid");
   for(let i=1;i<=15;i++){
     const b=document.createElement("button"); b.className="bbBtn"; b.textContent=String(i); b.type="button";
@@ -212,11 +218,15 @@ default = 38"></textarea>
   }
 
   document.getElementById("clearHand").addEventListener("click", ()=>{
-    first=second=type=bbChoice=null; rankGrid.querySelectorAll(".rankBtn").forEach(x=>x.classList.remove("active"));
-    setTypeButtons(""); bbGrid.querySelectorAll(".bbBtn").forEach(x=>x.classList.remove("active"));
-    hb.classList.add("show"); renderIfReady();
+    first=second=type=bbChoice=null;
+    rankGrid.querySelectorAll(".rankBtn").forEach(x=>x.classList.remove("active"));
+    setTypeButtons("");
+    bbGrid.querySelectorAll(".bbBtn").forEach(x=>x.classList.remove("active"));
+    hb.classList.add("show");
+    renderIfReady();
   });
 
+  // Затваря само при РЪКА + БЛАЙНД
   function maybeCloseHB(){
     if(first && second && bbChoice){
       if(first===second && type==="pair"){ hb.classList.remove("show"); return; }
@@ -224,7 +234,7 @@ default = 38"></textarea>
     }
   }
 
-  // Rendering
+  // Рендер
   function compute(pos,h,stk){
     const push=isPushPos(pos); const {def,map}=parseRaw(get(pos,stk),push); const hh=norm(h);
     if(push){const v=map[hh]!=null?map[hh]:def; return{disp:v==null?"—":String(Math.round(v*10)/10),num:v!=null,color:null,act:v};}
@@ -289,7 +299,7 @@ default = 38"></textarea>
     if(!editCtx) return; if(confirm("Да изчистя ли напълно тази клетка?")){ set(editCtx.key, editCtx.stk, ""); editModal.classList.remove("show"); renderIfReady(); }
   });
 
-  // Първоначално: отваряме Hand Builder
+  // Старт: показваме Hand Builder
   hb.classList.add("show");
 })();
 </script>
