--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<title>QuickTable UltraLite v43</title>
+<title>QuickTable UltraLite v44</title>
 <style>
   :root{
     --bg:#0b0f14; --panel:#0f1520; --panel2:#101827; --border:#223047; --text:#e7ecf3;
     --push:#6d4b8e; --mr:#c24a4a; --limp:#7fcf7f;
-    --gap:12px; --rankH:68px;
+    --gap:12px; --cellH:68px;
   }
   *{box-sizing:border-box;-webkit-tap-highlight-color:transparent;touch-action:manipulation}
   body{margin:0;background:var(--bg);color:var(--text);font:15px/1.32 -apple-system,system-ui,Segoe UI,Roboto,Arial}
+
+  /* Top chips */
   .bar{position:sticky;top:0;z-index:30;background:#101827;border-bottom:1px solid var(--border);padding:6px 8px;display:flex;align-items:center;gap:8px;justify-content:space-between}
   .chips{display:flex;gap:6px;flex-wrap:wrap;align-items:center}
   .chip{padding:4px 8px;border:1px solid var(--border);border-radius:999px;background:#0f1624;font-size:12px}
-  /* FAB „Ръка“ – вляво долу */
+
+  /* FAB: бутон „Ръка“ – вляво долу */
   .fab{position:fixed;left:14px;bottom:14px;z-index:35;border:1px solid var(--border);background:#0f1624;color:var(--text);
         border-radius:14px;padding:14px 18px;font-weight:800;font-size:18px;box-shadow:0 6px 18px rgba(0,0,0,.35);cursor:pointer}
 
@@ -25,14 +28,17 @@
   .hbBox{margin:0 auto;width:100%;max-width:620px;border:1px solid var(--border);border-radius:16px;overflow:hidden;background:var(--panel2)}
   .hbHead{display:flex;align-items:center;justify-content:space-between;padding:12px;border-bottom:1px solid var(--border)}
   .hbInner{padding:16px;background:var(--panel)}
+  /* 5×3 квадрат: 13 ранга + S + O = 15 клетки */
   .rankGrid{display:grid;grid-template-columns:repeat(5,1fr);gap:var(--gap);margin-bottom:14px}
-  .rankBtn,.typeBtn{border:1px solid var(--border);background:#142035;border-radius:14px;height:var(--rankH);font-weight:900;font-size:28px}
-  .typeBtn{background:#111a2b}
-  .rankBtn.active,.typeBtn.active{outline:2px solid #4da3ff}
-  .bbHead{margin:12px 0 8px;font-size:15px;opacity:.85;text-align:center}
+  .cellBtn{border:1px solid var(--border);border-radius:14px;height:var(--cellH);font-weight:900;font-size:28px;background:#142035}
+  .cellBtn.type{background:#111a2b}
+  .cellBtn.active{outline:2px solid #4da3ff}
+
+  .bbHead{margin:8px 0 8px;font-size:15px;opacity:.85;text-align:center}
   .bbGrid{display:grid;grid-template-columns:repeat(5,1fr);gap:12px;margin-bottom:14px}
   .bbBtn{border:1px solid var(--border);background:#1a2740;border-radius:12px;padding:20px 0;font-weight:900;font-size:20px}
   .bbBtn.active{outline:2px solid #4da3ff}
+
   .clearBtn{border:1px solid var(--border);background:#0f1624;border-radius:12px;padding:14px 0;font-weight:800;font-size:16px;width:100%}
 
   /* Results */
@@ -79,8 +85,10 @@
       </div>
       <div class="hbInner">
         <div class="rankGrid" id="rankGrid"></div>
+
         <div class="bbHead">Блайндове (1–15)</div>
         <div class="bbGrid" id="bbGrid"></div>
+
         <button id="clearHand" class="clearBtn" type="button">Изчисти</button>
       </div>
     </div>
@@ -121,7 +129,7 @@ default = 38"></textarea>
 
 <script>
 (function(){
-  // Цветове и алиаси
+  // Палитра и alias-и
   const COLORS={"FOLD":"#f4f6fa","L-F-F":"#a7e8a7","L-C-F":"#155d15","L-C-AI":"#bcdcf3","L-R-AI":"#0b3a94","MR-F-F":"#ffe27a","MR-C-AI":"#7b4a2a","MR-4B-AI":"#e44747","SHOVE":"#6d4b8e"};
   const norm=s=>(s||"").toUpperCase().replace(/\s+/g,"");
   const isPushPos=p=>/PUSH/i.test(p);
@@ -132,9 +140,9 @@ default = 38"></textarea>
     if(up==="MR-4B-AI")return{d:"ISO/3bet/Fold",c:COLORS["MR-4B-AI"]};
     return{d:act,c:null};};
 
-  // База
-  let DB=JSON.parse(localStorage.getItem("qt_v43")||"{}");
-  const k=(p,r)=>p+"||"+r; const get=(p,r)=>DB[k(p,r)]?.raw||""; const set=(p,r,raw)=>{DB[k(p,r)]={raw};localStorage.setItem("qt_v43",JSON.stringify(DB))};
+  // DB
+  let DB=JSON.parse(localStorage.getItem("qt_v44")||"{}");
+  const k=(p,r)=>p+"||"+r; const get=(p,r)=>DB[k(p,r)]?.raw||""; const set=(p,r,raw)=>{DB[k(p,r)]={raw};localStorage.setItem("qt_v44",JSON.stringify(DB))};
   function parseRaw(raw,push=false){ if(!raw)return{def:null,map:{}}; let def=null,map={};
     raw.split(/\r?\n|;/).map(s=>s.trim()).filter(Boolean).forEach(line=>{
       const m=line.split("="); if(m.length===1){const v=m[0].trim(); if(!v)return; def=push?parseFloat(v):v.toUpperCase();}
@@ -157,41 +165,50 @@ default = 38"></textarea>
   const curHandEl=document.getElementById("curHand"), curStackEl=document.getElementById("curStack");
   const hb=document.getElementById("hb");
 
-  // Ръка като текст
+  // Текст на ръката
   const handText=()=>{ if(!first||!second) return null; if(first===second) return first+second; return first+second+(type==="pair"?"":type||""); };
   const mapBB=n=>{n=+n; if(n<=4)return"0–4"; if(n<=7)return"4–7"; if(n<=10)return"7–10"; if(n<=13)return"10–13"; return"13+";};
 
-  // ОТВАРЯНЕ: винаги чист панел
+  // Отваряне: винаги чисто
   document.getElementById("openHB").addEventListener("click", ()=>{ resetBuilder(true); hb.classList.add("show"); });
   document.getElementById("closeHB").addEventListener("click", ()=> hb.classList.remove("show"));
 
-  // Рангове + S/O в края на решетката
+  // Запълваме 5×3 квадрат: 13 ранга + S + O
   const rankGrid=document.getElementById("rankGrid");
   function buildRankGrid(){
     rankGrid.innerHTML="";
-    // 13 ранга
-    ranks.forEach(r=>{ const b=document.createElement("button"); b.className="rankBtn"; b.textContent=r; b.type="button";
-      b.addEventListener("click", ()=>{
-        if(!first){ first=r; b.classList.add("active"); }
-        else if(!second){ second=r; }
-        else{ first=r; second=null; rankGrid.querySelectorAll(".rankBtn").forEach(x=>x.classList.remove("active")); b.classList.add("active"); }
-        if(first && second && first===second){ type="pair"; setTypeButtons("pair"); }
-        maybeCloseHB(); renderIfReady();
-      });
+    const cells=[];
+    ranks.forEach(r=>cells.push({type:"rank", label:r}));
+    cells.push({type:"type", label:"S"}); // клетка 14
+    cells.push({type:"type", label:"O"}); // клетка 15
+
+    cells.forEach(cell=>{
+      const b=document.createElement("button");
+      b.className="cellBtn"+(cell.type==="type"?" type":"");
+      b.textContent=cell.label;
+      b.type="button";
+      if(cell.type==="rank"){
+        b.addEventListener("click", ()=>{
+          if(!first){ first=cell.label; b.classList.add("active"); }
+          else if(!second){ second=cell.label; }
+          else{ first=cell.label; second=null; rankGrid.querySelectorAll(".cellBtn").forEach(x=>x.classList.remove("active")); b.classList.add("active"); }
+          if(first && second && first===second){ type="pair"; setTypeButtons(""); } // чифт → няма нужда от S/O
+          maybeCloseHB(); renderIfReady();
+        });
+      }else{
+        b.dataset.type = cell.label.toLowerCase();
+        b.addEventListener("click", ()=>{
+          type = b.dataset.type; setTypeButtons(type);
+          maybeCloseHB(); renderIfReady();
+        });
+      }
       rankGrid.appendChild(b);
-    });
-    // Добавяме S и O като „позиции №14 и №15“ – попълват празните 2 клетки на последния ред
-    ["s","o"].forEach(t=>{
-      const tb=document.createElement("button");
-      tb.className="typeBtn"; tb.textContent=t.toUpperCase(); tb.type="button"; tb.dataset.type=t;
-      tb.addEventListener("click", ()=>{ type=t; setTypeButtons(t); maybeCloseHB(); renderIfReady(); });
-      rankGrid.appendChild(tb);
     });
   }
   buildRankGrid();
 
   function setTypeButtons(t){
-    rankGrid.querySelectorAll(".typeBtn").forEach(x=>x.classList.toggle("active", x.dataset.type===t));
+    rankGrid.querySelectorAll(".cellBtn.type").forEach(x=>x.classList.toggle("active", x.dataset.type===t));
   }
 
   // Блайндове 1–15
@@ -215,7 +232,7 @@ default = 38"></textarea>
     }
   }
 
-  // Рендер логика
+  // Рендер
   function compute(pos,h,stk){
     const push=isPushPos(pos); const {def,map}=parseRaw(get(pos,stk),push); const hh=norm(h);
     if(push){const v=map[hh]!=null?map[hh]:def; return{disp:v==null?"—":String(Math.round(v*10)/10),num:v!=null,color:null,act:v};}
@@ -280,18 +297,18 @@ default = 38"></textarea>
     if(!editCtx) return; if(confirm("Да изчистя ли напълно тази клетка?")){ set(editCtx.key, editCtx.stk, ""); editModal.classList.remove("show"); renderIfReady(); }
   });
 
-  // Reset builder (чист старт)
-  function resetBuilder(clearBBAlso){
+  // Чист старт / reset
+  function resetBuilder(clearBB){
     first=second=type=null;
-    rankGrid.querySelectorAll(".rankBtn,.typeBtn").forEach(x=>x.classList.remove("active"));
-    if(clearBBAlso){
+    rankGrid.querySelectorAll(".cellBtn").forEach(x=>x.classList.remove("active"));
+    if(clearBB){
       bbChoice=null; stackR=null; curStackEl.textContent="—";
       bbGrid.querySelectorAll(".bbBtn").forEach(x=>x.classList.remove("active"));
     }
     curHandEl.textContent="—";
   }
 
-  // Първо зареждане: чист панел и отворен
+  // Първо зареждане: чисто и отворено
   resetBuilder(true);
   hb.classList.add("show");
 })();
